add starter code to git-ignore

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,8 @@
 .env.test.local
 .env.production.local
 
+/react-project-would-you-rather-starter/*
+
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
