--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,7 @@
 .env.test.local
 .env.production.local
 
-/react-project-would-you-rather-starter/*
+/reactnd-project-would-you-rather-starter
 
 npm-debug.log*
 yarn-debug.log*
