--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-redux-loading": "^4.6.1",
     "react-scripts": "^4.0.2",
     "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
