--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.2.0",
+    "react-minimal-pie-chart": "^8.1.0",
     "react-redux": "^7.2.2",
     "react-redux-loading": "^4.6.1",
     "react-scripts": "^4.0.2",
