--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-minimal-pie-chart": "^8.1.0",
     "react-redux": "^7.2.2",
     "react-redux-loading": "^4.6.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.2",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
