--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-minimal-pie-chart": "^8.1.0",
     "react-redux": "^7.2.2",
     "react-redux-loading": "^4.6.1",
+    "react-redux-loading-bar": "^5.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.2",
     "redux": "^4.0.5",
